[package]
name = "mysql-gtid"
version = "0.0.1"
edition = "2021"
authors = ["Axel Viala <axel.viala@darnuria.eu"]
description = "Mysql GTID management directly inspired by python-mysql-replication."
readme = "README.md"
keywords = ["mysql"]
repository = "https://github.com/darnuria/mysql-gtid"
categories = ["databases"]
licence = "MIT/Apache-2.0"

[dependencies]
# GTID
hex = "0.4"
once_cell = "1.16.0" #gtid also
regex = "1.7.0"
