[package]
name = "mysql-gtid"
# Still unstable a lot.
version = "0.3.2"
# Not stable enougth to public wait a little bit.
publish = false
# MSRV - Minimum Supported Rust Version ?
rust-version = "1.65"
edition = "2021"
authors = ["Axel Viala <axel.viala@darnuria.eu>"]
description = "Mysql GTID management directly inspired by python-mysql-replication."
readme = "README.md"
keywords = ["mysql"]
repository = "https://github.com/darnuria/mysql-gtid"
categories = ["databases"]
license = "MIT/Apache-2.0"

[dependencies]
# For hexbin to hexascii
hex = "0.4"
